objects/LLC_BI__Credit_Report__c.object
<CustomObject>
    <description>The Credit Report Object is used to store information from integrations with third party credit report pulling vendors.</description>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <description>This field is a master-detail field, that specifies the contact in which the credit report is run on.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Reports</relationshipLabel>
        <relationshipName>Credit_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FICO_Score__c</fullName>
        <description>This field is used to specify the credit report score returned from the third party credit pulling companies, nCino can integrate with.</description>
        <label>FICO Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__OFAC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OFAC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Credit Report</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Credit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>